fix the fact that bold text is the wrong font

--- a/magazine/src/app/globals.css
+++ b/magazine/src/app/globals.css
@@ -1410,7 +1410,6 @@ a {
 .ContentBody b, .ContentBody strong {
   font-weight: 700;
   font-size: 103%;
-  font-family: brandon-grotesque, sans-serif;
   letter-spacing:-.007em
 }
 
